--- a/package.json
+++ b/package.json
@@ -2,19 +2,23 @@
   "name": "futuristicvr-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000",
   "dependencies": {
+    "@material-ui/core": "^4.7.0",
+    "bootstrap": "^4.4.1",
+    "cloudinary-react": "^1.2.1",
     "history": "^4.10.1",
     "mdbreact": "^4.22.1",
     "node-sass": "^4.13.0",
     "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.14",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.11.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "semantic-ui-react": "^0.88.1"
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
