--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "private": true,
   "proxy": "http://localhost:3000",
   "dependencies": {
-    "@material-ui/core": "^4.9.0",
+    "@babel/polyfill": "^7.8.7",
+    "@material-ui/core": "^4.9.12",
+    "@stripe/react-stripe-js": "^1.1.2",
+    "@stripe/stripe-js": "^1.5.0",
     "bootstrap": "^4.4.1",
-    "cloudinary-react": "^1.2.1",
+    "cloudinary-react": "^1.5.0",
+    "core-js": "^3.6.5",
     "history": "^4.10.1",
-    "mdbreact": "^4.22.1",
-    "node-sass": "^4.13.0",
-    "react": "^16.11.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.11.0",
-    "react-redux": "^7.1.3",
+    "mdbreact": "^4.26.0",
+    "node-sass": "^4.14.0",
+    "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
+    "react-stripe-checkout": "^2.6.3",
+    "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
@@ -40,5 +45,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.8.4",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "jasmine": "^3.5.0"
   }
 }
